# work.hpp

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
develop/: CMakeLists.txt
develop/cmake/: SetupTargets.cmake
develop/untests/: CMakeLists.txt  work_tests.cpp  work_untests.cpp  work_untests.hpp
develop/vendors/: CMakeLists.txt
headers/work.hpp/: work_all.hpp
